update-feat-permission-management

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -35,6 +35,8 @@
     <a class="button" th:href="@{/tag-management/tags-list}">Tag Management</a>
     <a class="button" th:href="@{/product-management/products-list}">Product Management</a>
     <a class="button" th:href="@{/order-management}">Order Management</a>
+    <a class="button" th:href="@{/role-management}">Role Management</a>
+    <a class="button" th:href="@{/staff-management}">Staff Account Management</a>
 </div>
 </body>
 </html>
