--- a/src/main/resources/templates/update-product-form.html
+++ b/src/main/resources/templates/update-product-form.html
@@ -267,6 +267,7 @@
                                 <p id="content-product-meta" th:text="*{productMetas[__${metaStatus.index}__].content}"></p><br><br>
                             </div>
                         </div>
+                    </div>
                 </div>
                 </th:block>
 
