--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -141,20 +141,20 @@
             <p th:text="${quantityExceededOrderException}"></p>
         </th:block>
         <th:block th:unless="${quantityExceededOrderException}">
-            <th:block th:if="${order.getStatus().equals(T(com.springboot.ecommerce.services.order.OrderStatus).PROCESSING)}">
+            <th:block th:if="${order.getStatus().equals(T(com.springboot.ecommerce.entities.order.OrderStatus).PROCESSING)}">
                 <form th:action="@{/order-management/update-delivered-order/{orderId}(orderId=${order.id})}">
                     <button type="submit">Update Delivered Order</button>
                 </form>
             </th:block>
         </th:block>
-        <th:block th:if="${order.getStatus().equals(T(com.springboot.ecommerce.services.order.OrderStatus).PROCESSING)} or
-                            ${order.getStatus().equals(T(com.springboot.ecommerce.services.order.OrderStatus).DELIVERED)}">
+        <th:block th:if="${order.getStatus().equals(T(com.springboot.ecommerce.entities.order.OrderStatus).PROCESSING)} or
+                            ${order.getStatus().equals(T(com.springboot.ecommerce.entities.order.OrderStatus).DELIVERED)}">
             <form th:action="@{/order/update-cancelled-order/{orderId}(orderId=${order.id})}">
                 <button type="submit">Update Cancelled Order</button>
             </form>
         </th:block>
 
-        <th:block th:if="${order.getStatus().equals(T(com.springboot.ecommerce.services.order.OrderStatus).DELIVERED)}">
+        <th:block th:if="${order.getStatus().equals(T(com.springboot.ecommerce.entities.order.OrderStatus).DELIVERED)}">
             <form th:action="@{/order-management/update-completed-order/{orderId}(orderId=${order.id})}">
                 <button type="submit">Update Completed Order</button>
             </form>
