--- a/src/main/resources/templates/management-staff.html
+++ b/src/main/resources/templates/management-staff.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Staff management</title>
+    <title>Staff management mandanancut</title>
 </head>
 <body>
 <div class="container">
