--- a/src/main/resources/templates/management-staff.html
+++ b/src/main/resources/templates/management-staff.html
@@ -2,47 +2,151 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Staff management mand</title>
+    <title>Staff Management</title>
+    <style>
+        .nen {
+            background: radial-gradient(#fff, #ffd6d6);
+        }
+        body {
+            background-color: #f2f2f2;
+            font-family: 'Poppins', sans-serif;
+            margin: auto;
+        }
+        h1 {
+            margin-top: auto;
+            font-size: 40px;
+            color: #ff523b;
+            margin-left: 30px;
+        }
+        table {
+            border-collapse: separate;
+            width: 100%;
+        }
+        th, td {
+            text-align: center;
+            padding: 8px;
+        }
+        tr:nth-child(even) {
+            background-color: #ffd6d6;
+        }
+        th {
+            background-color: #ef6565;
+            color: white;
+        }
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+        button.add {
+            display: inline-block;
+            background: #ff523b;
+            color: white;
+            padding: 8px 30px;
+            margin: 30px 30px;
+            border-radius: 30px;
+            transition: background 0.5s;
+        }
+        button.add:hover {
+            background: #563434;
+        }
+        button.update {
+            background-color: #4CAF50;
+            color: white;
+            border: 2px solid #4CAF50;
+            border-radius: 8px;
+        }
+        button.update:hover {
+            background-color: white;
+            color: black;
+            border-radius: 8px;
+        }
+        button.delete {
+            background-color: red;
+            color: white;
+            border: 2px solid red;
+            border-radius: 8px;
+        }
+        button.delete:hover {
+            background-color: white;
+            color: black;
+            border-radius: 8px;
+        }
+        button.back {
+            background-color: burlywood;
+            color: white;
+            border-radius: 4px;
+        }
+        .tnn {
+            margin: auto;
+            font-family: 'Poppins', sans-serif;
+            overflow: auto;
+            background: linear-gradient(315deg, rgba(101, 0, 94, 1) 3%, rgba(60, 132, 206, 1) 38%, rgba(48, 238, 226, 1) 68%, rgba(255, 25, 25, 1) 98%) fixed;
+            animation: gradient 15s ease infinite;
+            background-size: 400% 400%;
+        }
+        @keyframes gradient {
+            0% {
+                background-position: 0% 0%;
+            }
+            50% {
+                background-position: 100% 100%;
+            }
+            100% {
+                background-position: 0% 0%;
+            }
+        }
+    </style>
 </head>
 <body>
+<div class="tnn"><a><img th:src="@{/img/logo.png}" alt="logo" width="80px"></a></div>
 <div class="container">
-    <h1>Staff account list</h1>
-    <button class="add">
-        <a th:href="@{/staff-management/add-new-staff}">Add new staff account</a>
-    </button>
+    <div class="nen">
+        <h1>Staff Account List</h1>
+        <button class="add">
+            <a th:href="@{/staff-management/add-new-staff}">Add new staff account</a>
+        </button>
+    </div>
     <table class="staff-list-management">
         <thead>
-            <tr>
-                <th>Email</th>
-                <th>Full name</th>
-                <th>Role</th>
-                <th>Account Lock</th>
-                <th>Enabled</th>
-                <th>Action</th>
-            </tr>
+        <tr>
+            <th>Email</th>
+            <th>Full Name</th>
+            <th>Role</th>
+            <th>Account Lock</th>
+            <th>Enabled</th>
+            <th>Action</th>
+        </tr>
         </thead>
         <tbody>
-            <tr th:each="st: ${staffs}">
-                <td th:text="${st.getEmail()}"></td>
-                <td th:text="${st.getFirstName() + ' ' + st.getLastName()}"></td>
-                <td th:text="${st.getRole()}"></td>
-                <td th:text="${st.isAccountNonLocked()}"></td>
-                <td th:text="${st.isEnabled()}"></td>
-                <td>
-                    <button class="delete" type="button">
-                        <a onclick="return warningDelete('Are you sure qant to delete this item ?');"
-                           th:href="@{/staff-management/delete-staff/{id}(id=${st.getId()})}">Delete</a>
-                    </button>
-                    <button class="update">
-                        <a th:href="@{/staff-management/staff-detail/{id}(id=${st.getId()})}">Update</a>
-                    </button>
-                </td>
-            </tr>
+        <tr th:each="st: ${staffs}">
+            <td th:text="${st.getEmail()}"></td>
+            <td th:text="${st.getFirstName() + ' ' + st.getLastName()}"></td>
+            <td th:text="${st.getRole()}"></td>
+            <td th:text="${st.isAccountNonLocked()}"></td>
+            <td th:text="${st.isEnabled()}"></td>
+            <td>
+                <button class="delete" type="button">
+                    <a onclick="return warningDelete('Are you sure want to delete this item?');"
+                       th:href="@{/staff-management/delete-staff/{id}(id=${st.getId()})}">Delete</a>
+                </button>
+                <button class="update">
+                    <a th:href="@{/staff-management/staff-detail/{id}(id=${st.getId()})}">Update</a>
+                </button>
+            </td>
+        </tr>
         </tbody>
     </table>
     <button class="back">
-        <a th:href="@{/admin}">Back to Admin panel</a>
+        <a th:href="@{/admin}">Back to Admin Panel</a>
     </button>
 </div>
+<script>
+    function warningDelete(message) {
+        if (confirm(message) == true) {
+            return true;
+        }
+        return false;
+    }
+</script>
 </body>
 </html>
