--- a/src/main/resources/templates/update-role-form.html
+++ b/src/main/resources/templates/update-role-form.html
@@ -5,6 +5,89 @@
     <title>Update Role</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background: linear-gradient(45deg, #FFA500, #FFC0CB);
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 800px;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        .form-update-role {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            flex-grow: 1;
+        }
+
+        .form-group {
+            display: flex;
+            flex-direction: column;
+        }
+
+        label {
+            font-size: 16px;
+            color: #333;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"],
+        input[type="submit"],
+        select {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+            color: #333;
+            transition: border-color 0.3s ease-in-out;
+        }
+
+        input[type="text"],
+        input[type="submit"] {
+            background-color: #f6f6f6;
+        }
+
+        input[type="text"]:focus,
+        input[type="submit"]:focus,
+        select:focus {
+            outline: none;
+            border-color: #de7693;
+        }
+
+        input[type="submit"] {
+            background-color: #de7693;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #ca5a77;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -31,7 +114,6 @@
                            th:text="${per.getName()}">
                 </div>
             </th:block>
-
         </div>
         <input type="submit" value="Update role">
     </form>
