--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page | TechShop </title>
+    <title>Home Page |TechShop </title>
     <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css}" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" th:href="@{/css/home.css}">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-
 </head>
 <body>
 
@@ -32,7 +30,7 @@
                             style="border-radius: 10px; border: none; height: 30px ; width:75px; background-color: #f68383">
                         </form>
                     </li>
-                    <li><a th:href="@{/home}" >Home</a></li>
+                    <li><a th:href="@{/home}" >Homea</a></li>
                     <li><a>Products</a></li>
                     <li><a th:href="@{/order/history}">Order History</a></li>
                     <li><a>Contact</a></li>
