--- a/src/main/resources/templates/update-role-form.html
+++ b/src/main/resources/templates/update-role-form.html
@@ -5,6 +5,103 @@
     <title>Update Role</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(45deg, #FFA500, #FFC0CB);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 700px;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #444;
+            margin-bottom: 20px;
+        }
+
+        .form-update-role {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .form-update-role label {
+            font-size: 16px;
+            color: #444;
+        }
+
+        .form-update-role input[type="text"],
+        .form-update-role input[type="submit"],
+        .form-update-role select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+            color: #444;
+            background-color: #f6f6f6;
+            transition: border-color 0.3s ease-in-out;
+        }
+
+        .form-update-role input[type="submit"] {
+            border: none;
+            font-size: 16px;
+            color: #fff;
+            cursor: pointer;
+            background-color: #FFC0CB;
+        }
+
+        .form-update-role input[type="submit"]:hover {
+            opacity: 0.8;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group div {
+            display: flex;
+            align-items: center;
+        }
+
+        .form-update-role a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .permissions-select {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-image: url('data:image/svg+xml;utf8,<svg fill="%23444" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+            background-repeat: no-repeat;
+            background-position: right 10px center;
+            padding-right: 30px; /* Adjust to make space for the arrow */
+            height: 40px; /* Set height to match other inputs */
+        }
+        
+        .permissions-select option {
+            padding: 10px;
+        }
+        
+    </style>
 </head>
 <body>
 <div class="container">
@@ -23,15 +120,9 @@
         </div>
         <div class="form-group">
             <label for="permissions">Permissions: </label>
-            <th:block th:each="per : ${permissions}">
-                <div>
-                    <input type="checkbox" id="permissions"
-                           th:field="*{permissions}"
-                           th:value="${per.getName()}"
-                           th:text="${per.getName()}">
-                </div>
-            </th:block>
-
+            <select id="permissions" class="permissions-select" th:field="*{permissions}">
+                <option th:each="per : ${permissions}" th:value="${per.getName()}" th:text="${per.getName()}"></option>
+            </select>
         </div>
         <input type="submit" value="Update role">
     </form>
