update-product-analytics

--- a/src/main/resources/templates/product-analytics.html
+++ b/src/main/resources/templates/product-analytics.html
@@ -39,5 +39,7 @@
     <div id="product-std-container"></div>
 
     <script th:src="@{/js/analytic-product.js}"></script>
+    <script th:src="@{/js/render-chart.js}"></script>
+
 </body>
 </html>
