--- a/src/main/resources/templates/demo-analytics.html
+++ b/src/main/resources/templates/demo-analytics.html
@@ -32,5 +32,6 @@
 
     <script th:src="@{/js/analytic-order-status-cnt.js}"></script>
     <script th:src="@{/js/analytic-tag-product-cnt.js}"></script>
+    <script th:src="@{/js/render-chart.js}"></script>
 </body>
 </html>
