--- a/src/main/resources/templates/product-detail-analytics.html
+++ b/src/main/resources/templates/product-detail-analytics.html
@@ -33,6 +33,8 @@
     </script>
     <script th:src="@{/js/analytic-product-detail.js}"></script>
     <script th:src="@{/js/render-chart.js}"></script>
-
+    <a th:href="@{/analytics/product}">
+        <button type="button">Back</button>
+    </a>
 </body>
 </html>
