--- a/src/main/resources/templates/analytics-category-detail.html
+++ b/src/main/resources/templates/analytics-category-detail.html
@@ -104,7 +104,8 @@
                                                     <tr><th>Name</th><td></td></tr>
                                                     <tr><th>Product count</th><td></td></tr>
                                                     <tr><th>Rating count</th><td></td></tr>
-                                                    <tr><th>Rating avg</th><td></td></tr>
+                                                    <tr><th>Rating average</th><td></td></tr>
+                                                    <tr><th>Revenue</th><td></td></tr>
                                                     <tr><th>Unique buyers count</th><td></td></tr>
                                                     <tr><th>Reorder rate</th><td></td></tr>
                                                 </table>
@@ -128,16 +129,6 @@
                                                     </div>
                                                     <div class="col-lg-12 col-sm-8 grid-margin  grid-margin-lg-0">
                                                         <div class="pl-0 pl-lg-4 ">
-                                                            <div class="d-xl-flex justify-content-between align-items-center mb-2">
-                                                                <div class="d-lg-flex align-items-center mb-lg-2 mb-xl-0">
-                                                                    <h3 class="text-dark font-weight-bold mr-2 mb-0">Devices sales</h3>
-                                                                    <h5 class="mb-0">( growth 62% )</h5>
-                                                                </div>
-                                                                <div class="d-lg-flex">
-                                                                    <p class="mr-2 mb-0">Timezone:</p>
-                                                                    <p class="text-dark font-weight-bold mb-0">GMT-0400 Eastern Delight Time</p>
-                                                                </div>
-                                                            </div>
                                                             <div id="category-rating-chart-container">
                                                                 <div id="category-rating-chart"></div>
                                                             </div>
@@ -162,16 +153,6 @@
                                                     </div>
                                                     <div class="col-lg-12 col-sm-8 grid-margin  grid-margin-lg-0">
                                                         <div class="pl-0 pl-lg-4 ">
-                                                            <div class="d-xl-flex justify-content-between align-items-center mb-2">
-                                                                <div class="d-lg-flex align-items-center mb-lg-2 mb-xl-0">
-                                                                    <h3 class="text-dark font-weight-bold mr-2 mb-0">Devices sales</h3>
-                                                                    <h5 class="mb-0">( growth 62% )</h5>
-                                                                </div>
-                                                                <div class="d-lg-flex">
-                                                                    <p class="mr-2 mb-0">Timezone:</p>
-                                                                    <p class="text-dark font-weight-bold mb-0">GMT-0400 Eastern Delight Time</p>
-                                                                </div>
-                                                            </div>
                                                             <div id="category-osc-chart-container">
                                                                 <div id="category-osc-chart"></div>
                                                             </div>
@@ -196,16 +177,6 @@
                                                     </div>
                                                     <div class="col-lg-12 col-sm-8 grid-margin  grid-margin-lg-0">
                                                         <div class="pl-0 pl-lg-4 ">
-                                                            <div class="d-xl-flex justify-content-between align-items-center mb-2">
-                                                                <div class="d-lg-flex align-items-center mb-lg-2 mb-xl-0">
-                                                                    <h3 class="text-dark font-weight-bold mr-2 mb-0">Devices sales</h3>
-                                                                    <h5 class="mb-0">( growth 62% )</h5>
-                                                                </div>
-                                                                <div class="d-lg-flex">
-                                                                    <p class="mr-2 mb-0">Timezone:</p>
-                                                                    <p class="text-dark font-weight-bold mb-0">GMT-0400 Eastern Delight Time</p>
-                                                                </div>
-                                                            </div>
                                                             <div id="category-osr-chart-container">
                                                                 <div id="category-osr-chart"></div>
                                                             </div>
