update-admin-panel

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -37,6 +37,7 @@
     <a class="button" th:href="@{/order-management}">Order Management</a>
     <a class="button" th:href="@{/role-management}">Role Management</a>
     <a class="button" th:href="@{/staff-management}">Staff Account Management</a>
+    <a class="button" th:href="@{/analytics/main}">Analytics</a>
 </div>
 </body>
 </html>
