--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,7 +30,7 @@
                             style="border-radius: 10px; border: none; height: 30px ; width:75px; background-color: #f68383">
                         </form>
                     </li>
-                    <li><a th:href="@{/home}" >Homea</a></li>
+                    <li><a th:href="@{/home}" >Home</a></li>
                     <li><a>Products</a></li>
                     <li><a th:href="@{/order/history}">Order History</a></li>
                     <li><a>Contact</a></li>
