--- a/src/main/resources/templates/analytics-main.html
+++ b/src/main/resources/templates/analytics-main.html
@@ -130,7 +130,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-12">
                                                         <div class="d-flex justify-content-between align-items-center mb-4">
-                                                            <h4 class="card-title mb-0">Order status count</h4>
+                                                            <h4 class="card-title mb-0">Order status</h4>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-12 col-sm-8 grid-margin  grid-margin-lg-0">
@@ -153,7 +153,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-12">
                                                         <div class="d-flex justify-content-between align-items-center mb-4">
-                                                            <h4 class="card-title mb-0">Order revenue</h4>
+                                                            <h4 class="card-title mb-0">Order value</h4>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-12 col-sm-8 grid-margin  grid-margin-lg-0">
@@ -203,7 +203,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-12">
                                                         <div class="d-flex justify-content-between align-items-center mb-4">
-                                                            <h4 class="card-title mb-0">Tag product count</h4>
+                                                            <h4 class="card-title mb-0">Tag product</h4>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-12 col-sm-8 grid-margin  grid-margin-lg-0">
@@ -278,7 +278,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-12">
                                                         <div class="d-flex justify-content-between align-items-center mb-4">
-                                                            <h4 class="card-title mb-0">Highest Revenue Categories</h4>
+                                                            <h4 class="card-title mb-0">Revenue by categories and order status</h4>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-12 col-sm-8 grid-margin  grid-margin-lg-0">
@@ -323,7 +323,7 @@
                                 <div class="col-lg-12 grid-margin stretch-card">
                                     <div class="card">
                                         <div class="card-body">
-                                            <h4 class="card-title">Category Pc</h4>
+                                            <h4 class="card-title">Categories detail</h4>
                                             <div id="category-pc-container">
                                                 <table class="table">
                                                     <thead>
