--- a/src/main/resources/templates/update-staff-form.html
+++ b/src/main/resources/templates/update-staff-form.html
@@ -129,7 +129,7 @@
             </div>
         </th:block>
         <div class="form-group">
-            <label for="account-lock">Account Lock: </label>
+            <label for="account-lock">Account Non Lock: </label>
             <input id="account-lock" type="checkbox" th:field="*{accountNonLocked}" th:checked="${true}">
         </div>
         <div class="form-group">
