--- a/src/main/resources/templates/analytics-main.html
+++ b/src/main/resources/templates/analytics-main.html
@@ -68,7 +68,7 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/analytics/main}">
                         <span class="icon-bg"><i class="mdi mdi-cube menu-icon"></i></span>
-                        <span class="menu-title">Dashboard</span>
+                        <span class="menu-title">Analytic</span>
                     </a>
                 </li>
                 <li class="nav-item sidebar-user-actions">
